--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,26 @@
-apply plugin: 'com.android.application'
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/'}
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
+    }
+}
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 
+repositories {
+    maven { url 'https://maven.google.com' }
+}
+
+apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
+        manifestPlaceholders = [
+                onesignal_app_id: 'a8ed83ef-649d-4159-b434-28c0f27bbbbf',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
         applicationId "charlesroger.informanet"
         minSdkVersion 21
         targetSdkVersion 26
@@ -19,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
